数据访问默认数据源连接配置，jdbcTemplate使用

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,3 +9,9 @@ spring:
     multipart:
       max-file-size: 10MB
       max-request-size: 100MB
+
+  datasource:
+    driver-class-name: com.mysql.jdbc.Driver
+    username: dev01mysql01
+    password: dev01mysql01
+    url: jdbc:mysql://172.16.116.131:3306/dev01mysql01?useSSL=false
