--- a/pom.xml
+++ b/pom.xml
@@ -15,8 +15,20 @@
     <description>后台管理系统模板</description>
     <properties>
         <java.version>1.8</java.version>
+        <mysql.version>5.1.49</mysql.version>
     </properties>
     <dependencies>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jdbc</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
