--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,20 +16,21 @@ spring:
     password: dev01mysql01
     url: jdbc:mysql://172.16.116.131:3306/dev01mysql01?useSSL=false
     druid:
-
-      stat-view-servlet:
+      aop-patterns: top.zhuhcl.admin.springboot_admin.*  #监控SpringBean
+      filters: stat,wall # 底层开启功能，stat（sql监控），wall（防火墙）
+      stat-view-servlet: # 配置监控页功能
         login-username: root
         login-password: root
         reset-enable: false
         enabled: true
 
-      web-stat-filter:
+      web-stat-filter: # 监控web
         enabled: true
         exclusions: '*.js,*.gif,*.jpg,*.png,*.css,*.ico,/druid/*'
         url-pattern: /*
 
       filter:
-        stat:
+        stat: # 对上面filters里面的stat的详细配置
           log-slow-sql: true
           slow-sql-millis: 10000
           enabled: true
@@ -39,6 +40,14 @@ spring:
           config:
             drop-table-allow: false
             update-allow: false
-      aop-patterns:
+#            select-all-column-allow: false
+
+mybatis:
+#  config-location: classpath:mybatis/mybatis-config.xml
+  type-aliases-package: top.zhuchl.admin.springboot_admin.DO
+  mapper-locations: classpath:mybatis/mappers/*.xml
+  configuration:
+    map-underscore-to-camel-case: true
+
 
 
