--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -42,6 +42,22 @@ spring:
             update-allow: false
 #            select-all-column-allow: false
 
+
+  #redis 配置
+  redis:
+    host: 172.16.116.131
+    port: 7000
+    client-type: lettuce
+    password: zcl123
+    username: zcl
+    lettuce:
+      pool:
+        max-active: 10
+    jedis:
+      pool:
+        max-active: 10
+#    url: redis://auth:@172.16.116.131:7000
+
 #mybatis:
 ##  config-location: classpath:mybatis/mybatis-config.xml
 #  type-aliases-package: top.zhuchl.admin.springboot_admin.DO
@@ -54,6 +70,8 @@ mybatis-plus:
   configuration:
     map-underscore-to-camel-case: true
   type-aliases-package: top.zhuchl.admin.springboot_admin.DO
+
+
 
 
 
