--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+pojo.user.userName=zcl
+pojo.user.password=123456
 
+spring.profiles.active=mygroup
+
+spring.profiles.group.mygroup[0]=aaa
+spring.profiles.group.mygroup[1]=bbb
+
+server.port=7777
