自定义starter场景

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,12 @@
 pojo.user.userName=zcl
 pojo.user.password=123456
 
-spring.profiles.active=mygroup
+spring.profiles.active=mygroup,default
 
 spring.profiles.group.mygroup[0]=aaa
 spring.profiles.group.mygroup[1]=bbb
 
 server.port=7777
+
+hello.service.prefix='hi,'
+hello.service.suffix=chifanmei
