--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,12 @@
     <dependencies>
 
         <dependency>
+            <groupId>top.zhuchl</groupId>
+            <artifactId>hello-spring-starter</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
